small fix to sidebar alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -83,6 +83,7 @@ a:hover {
   position: sticky;
   border-radius: 10px;
   margin-bottom: 20px;
+  margin-top: 70px;
   border-left: 2px solid #15570f; 
   flex-direction: column;
   align-items: center;
